--- a/styles/in-page-nav.css
+++ b/styles/in-page-nav.css
@@ -55,7 +55,7 @@
 	.has-in-page-nav article h3.in-page-nav-active,
 	.has-in-page-nav article h4.in-page-nav-active
 {
-    border-left: 5px solid #e7781e;
+    color: #e7781e;
     padding-left: 15px;
     margin-left: 5px;
 }
